name:                AddExample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unrooted/AddExample#readme
license:             BSD3
license-file:        LICENSE
author:              Konrad &#39;Unrooted&#39; Klawikowski
maintainer:          konrad.root.klawikowski@gmail.com
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable AddExample
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
