name:                DoExample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Unrooted/LearningMyselfAHaskell#readme
license:             
license-file:        LICENSE
author:              Konrad Klawikowski aka Konrad Nachtigall aka Unrooted
maintainer:          konrad.root.klawikowski@gmail.com
copyright:           Unrooted
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable DoExample
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
